# zephyr-nfc08a1

./: .gitignore  README.md  west.yml
apps/nfc08a1/: CMakeLists.txt  nucleo_l053r8.conf  prj.conf
apps/nfc08a1/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nucleo_l053r8.overlay
apps/nfc08a1/src/: analogConfigTbl_NFC08A1.c  demo.h  demo_ce.c  demo_ce.h  demo_polling.c  demo_polling.h  main.c  utils.h
